# killthenoise-back-end

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AI_TESTING_GUIDE.md  CONNECTION_TESTING.md  CONTRIBUTOR_GUIDE.md  DEVELOPMENT_STANDARDS.md  FRONTEND_SLACK_INTEGRATION_GUIDE.md  FRONTEND_SLACK_OAUTH_GUIDE.md  HUBSPOT_TESTING.md  JIRA_API_TOKEN_FRONTEND_GUIDE.md  JIRA_FRONTEND_ERROR_HANDLING.md  JIRA_FRONTEND_GUIDE.md  MULTI_TENANT_HUBSPOT.md  PERSISTENT_HUBSPOT_AUTH_GUIDE.md  PERSISTENT_SLACK_AUTH_GUIDE.md  SLACK_INTEGRATION_CLEANUP_REPORT.md  TESTING_GUIDE.md  ai_generated_issues_20250812_204045.json  alembic.ini  pyproject.toml  railway.toml  requirements.txt  test_ai_type_classification.py  test_settings_and_severity.py  test_teams_api.py  test_type_classification.py
alembic/: env.py
app/: db.py  main.py
scripts/: backfill_ai_clustering.py  check_class_length.py  check_file_length.py  check_function_length.py  check_hubspot_integrations.py  check_slack_integrations.py  cleanup_duplicate_slack_integrations.py  create_test_issues.py  hubspot_exchange_code.py  hubspot_oauth.py  jira_oauth.py  reanalyze_existing_issues.py  reuse_hubspot_integration.py  run_tests.py  setup_ai_testing.py  setup_dev_environment.py  setup_persistent_auth.py  setup_persistent_slack_auth.py  setup_test_data.py  test_ai_generation_output.py  test_api_endpoints.py  test_connections.py  test_hubspot_connection.py  test_jira_api_token.py  test_jira_connection.py  test_jira_integration.py  test_jira_oauth.py  test_multi_tenant_hubspot.py  test_persistent_auth.py  update_severity_scale.py  (+2 more)
(+54 files in other folders)
